--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 <main>
     <img src="https://images.unsplash.com/photo-1651571834782-e29460c3e465?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80" width="200px" alt="breakfast">
 </main>
+<div class="section">
+    <ul>
+        <li>🥔</li>
+        <li>🥕</li>
+        <li>🧄</li>
+        <li>🌽</li>
+        <li>🍅</li>
+        <li>🍄</li>
+    </ul>
+</div>
     <footer >
         <h1>
             foodie
