--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 <main>
     <img src="https://images.unsplash.com/photo-1651571834782-e29460c3e465?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80" width="200px" alt="breakfast">
 </main>
+    <div>
+        <ul>
+            <li><a href="https://www.bbcgoodfood.com/recipes/collection/mushroom-recipes">mushroom-recipes</a></li>
+            <li><a href="https://www.bbcgoodfood.com/recipes/mushroom-soup">mushroom-soup</a></li>
+        </ul>
+    </div>
     <footer >
         <h1>
             foodie
